--- a/index.html
+++ b/index.html
@@ -4,12 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
   <title>Auktion800</title>
 </head>
 
 <body>
+    <nav class="navigation-wrapper">
+        <div class="navigation-content">
+            <a href="index.html" class="company-name">Nackowskis</a>
+            <div class="search-content">
+                <input type="text" placeholder="Search.." />
+                <button class="search" onclick="myFunction()"><img src="Images/search.png"/></button>
+            </div>
+        </div>
+    </nav>
 
+    <section class="auction-wrapper">
+        <div class="auction-object">
+            <h1>Titel</h1>
+            <p>Beskrivning</p>
+        </div>
+        <div class="auction-object">
+            <h1>Titel</h1>
+            <p>Beskrivning</p>
+        </div>
+        <div class="auction-object">
+            <h1>Titel</h1>
+            <p>Beskrivning</p>
+        </div>
+        <div class="auction-object">
+            <h1>Titel</h1>
+            <p>Beskrivning</p>
+        </div>
+    </section>
 
 
 
