--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </div>
         </div>
     </nav>
-  
+
     <section class="auction-wrapper">
         <div class="auction-object">
-            <h1>Titel</h1>
+            <h1 id="title1">Titel</h1>
             <p>Beskrivning</p>
         </div>
         <div class="auction-object">
@@ -40,10 +40,6 @@
             <p>Beskrivning</p>
         </div>
     </section>
-
-<div id="test"></div>
-
-
 
 <script src="JavaScript/app.js"></script>
 
