--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             <p>Beskrivning</p>
         </div>
         <div class="auction-object">
-            <h1>Titel</h1>
+            <h1 id="title2">Titel</h1>
             <p>Beskrivning</p>
         </div>
         <div class="auction-object">
-            <h1>Titel</h1>
+            <h1 id="title3">Titel</h1>
             <p>Beskrivning</p>
         </div>
         <div class="auction-object">
-            <h1>Titel</h1>
+            <h1 id="title4">Titel</h1>
             <p>Beskrivning</p>
         </div>
     </section>
