--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
-  <title>Auktion800</title>
+  <title>Nackowskis Auktion</title>
 </head>
 
 <body>
@@ -25,19 +25,19 @@
     <section class="auction-wrapper">
         <div class="auction-object">
             <h1 id="title1">Titel</h1>
-            <p>Beskrivning</p>
+            <p id="description1">Beskrivning</p>
         </div>
         <div class="auction-object">
             <h1 id="title2">Titel</h1>
-            <p>Beskrivning</p>
+            <p id="description2">Beskrivning</p>
         </div>
         <div class="auction-object">
             <h1 id="title3">Titel</h1>
-            <p>Beskrivning</p>
+            <p id="description3">Beskrivning</p>
         </div>
         <div class="auction-object">
             <h1 id="title4">Titel</h1>
-            <p>Beskrivning</p>
+            <p id="description4">Beskrivning</p>
         </div>
     </section>
 
