--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="navigation-content">
             <a href="index.html" class="company-name">Nackowskis</a>
             <div class="search-content">
-                <input type="text" placeholder="Search.." />
-                <button class="search" onclick="myFunction()"><img src="Images/search.png"/></button>
+                <input type="text" placeholder="Search.." id="search-input"/>
+                <button class="search" id="search-button"><img src="Images/search.png"/></button>
             </div>
         </div>
     </nav>
 
-    <section class="auction-wrapper">
+    <section class="auction-wrapper" id="auction-wrapper">
         <div id="auction-object0"></div>
         <div id="auction-object1"></div>
         <div id="auction-object2"></div>
