--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html" class="company-name">Nackowskis</a>
             <div class="search-content">
                 <input type="text" placeholder="Search.." id="search-input"/>
-                <button class="search" id="search-button"><img src="Images/search.png"/></button>
+                <button class="search" id="search-button" onclick="searchAuction()"><img src="Images/search.png"/></button>
             </div>
         </div>
     </nav>
