--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </section>
 
 <script src="JavaScript/app.js"></script>
-<script src="JavaScript/bid.js"></script>
+<script src="JavaScript/search.js"></script>
+
 </body>
 </html>
