--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
     </nav>
 
+    <div class="sort-wrapper" id="sort-wrapper"></div>
     <section class="auction-wrapper" id="auction-wrapper">
 
     </section>
