--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </section>
 
-<script src="JavaScript/app.js"></script>
+<script src="JavaScript/test.js"></script>
 <script src="JavaScript/bid.js"></script>
 
 </body>
