--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <script src="JavaScript/app.js"></script>
 <script src="JavaScript/bid.js"></script>
+<script src="JavaScript/create-article.js"></script>
 
 </body>
 </html>
